src/test/ui/moves/move-out-of-tuple-field.nll.stderr
error[E0382]: use of moved value: `x.0`
  --> $DIR/move-out-of-tuple-field.rs:8:13
   |
LL |     let y = x.0;
   |             --- value moved here
LL |     let z = x.0;
   |             ^^^ value used here after move
   |
   = note: move occurs because `x.0` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x.0`
  --> $DIR/move-out-of-tuple-field.rs:12:13
   |
LL |     let y = x.0;
   |             --- value moved here
LL |     let z = x.0;
   |             ^^^ value used here after move
   |
   = note: move occurs because `x.0` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
